--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
     "esrun": "^3.2.26",
+    "express": "^4.21.2",
     "lucida": "^2.0.0-54",
     "lucida-tagger": "^0.1.1",
     "spotify-zeroconf": "^0.1.4"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
+  }
 }
