--- a/.gitignore
+++ b/.gitignore
@@ -8809,3 +8809,5 @@ node_modules/wildcard/test/all.js
 node_modules/wildcard/test/arrays.js
 node_modules/wildcard/test/objects.js
 node_modules/wildcard/test/strings.js
+downloads/La Arrolladora Banda El Limón De René Camacho/Una Historia Mal Contada/01. Una Historia Mal Contada.flac
+downloads/Lady Gaga/Die With A Smile/01. Die With A Smile.flac
