--- a/.gitignore
+++ b/.gitignore
@@ -8811,3 +8811,4 @@ node_modules/wildcard/test/objects.js
 node_modules/wildcard/test/strings.js
 downloads/La Arrolladora Banda El Limón De René Camacho/Una Historia Mal Contada/01. Una Historia Mal Contada.flac
 downloads/Lady Gaga/Die With A Smile/01. Die With A Smile.flac
+searchtest.js
